--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<input class="color2" type="color" name="color2" value="#ff0000">
 	<h2>Current CSS Background</h2>
 	<h3></h3>
-	<script type="text/javascript" src="bundle.js"></script>
+	<div class="left"> </div>
+    <div class="right"></div>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
